# monofonic

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  FindFFTW3.cmake  LICENSE  README.md  bitbucket-pipelines.yml  example.conf  example_testing.conf  ics.conf  version.cmake
MG/: example_Ea_table.txt  example_Geff_table.txt
include/: HDF_IO.hh  bounding_box.hh  cmake_config.hh.in  config_file.hh  convolution.hh  cosmology_calculator.hh  cosmology_parameters.hh  general.hh  grid_fft.hh  grid_ghosts.hh  grid_interpolate.hh  ic_generator.hh  interpolate.hh  logger.hh  mat3.hh  memory_stat.hh  operators.hh  output_plugin.hh  particle_container.hh  particle_generator.hh  particle_plt.hh  physical_constants.hh  random_plugin.hh  system_stat.hh  testing.hh  transfer_function_plugin.hh  vec.hh  vec3.hh
include/math/: interpolate.hh  mat3.hh  ode_integrate.hh  vec3.hh
src/: cosmology_parameters.cc  grid_fft.cc  ic_generator.cc  logger.cc  main.cc  output_plugin.cc  random_plugin.cc  testing.cc  transfer_function_plugin.cc
src/old/: output_gadget2___original.cc
src/plugins/: HDF_IO.hh  PANPHASIA.hh  output_arepo.cc  output_gadget2.cc  output_gadget_hdf5.cc  output_generic.cc  output_genericio.cc  output_grafic2.cc  output_swift.cc  random_music.cc  random_music_wnoise_generator.cc  random_music_wnoise_generator.hh  random_ngenic.cc  random_panphasia.cc  random_panphasia_ho.cc  transfer_3FA_CLASS.cc  transfer_CAMB_file.cc  transfer_CLASS.cc  transfer_eisenstein.cc  transfer_zwindstroom.cc
testing/RAMSES/: ics_ramses.conf  ramses.nml
